--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         privileged: true
         environment:
             - MYSQL_DATABASE=FastRunner
-            - MYSQL_ROOT_PASSWORD=xhb123456
+            - MYSQL_ROOT_PASSWORD=root
         volumes:
             - ./mysql:/var/lib/mysql  # 映射mysql数据
             - ./FasterRunner/mydb.cnf:/etc/mysql/mysql.conf.d/mysqld.cnf  # 映射出mysql的配置文件
@@ -37,7 +37,7 @@ services:
             - ./FasterWeb/dist:/usr/share/nginx/html
             - ./FasterRunner/extra_apps/xadmin/static/xadmin:/usr/share/nginx/html/static/xadmin  # xadmin/ueditor/FasterRunner因为我公司内部配置了跳板原因，须将静态文件挂载到前端文件相同目录
             - ./FasterRunner/extra_apps/DjangoUeditor/static/ueditor:/usr/share/nginx/html/static/ueditor
-            - ./FasterWeb/default.conf:/etc/nginx/default.conf
+            - ./FasterWeb/default.conf:/etc/nginx/conf.d/default.conf
         ports:
             - 8888:8888
         networks:
@@ -47,8 +47,8 @@ services:
         image: rabbitmq:management-alpine
         container_name: rabbitmq
         environment:
-            - RABBITMQ_DEFAULT_USER=xuhaibo
-            - RABBITMQ_DEFAULT_PASS=xuhaibo123
+            - RABBITMQ_DEFAULT_USER=guest
+            - RABBITMQ_DEFAULT_PASS=guest
         restart: always
         ports:
             - "15672:15672"
@@ -58,4 +58,4 @@ services:
 
 networks:  # 指定了内网，可以在配置文件中直接使用容器名字，但是需要先在宿主机创建网络
     fasterunner:
-        external: false
+        external: true
