修改兼容hrun2.x 增加api 上传excel、导出excel功能

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django == 2.1.11
 django-cors-headers == 2.4.0
-djangorestframework == 3.8.2
+djangorestframework == 3.9.2
 HttpRunner == 1.5.15
 PyMySQL == 0.9.3
 beautifulsoup4 == 4.6.3
@@ -16,3 +16,4 @@ django-reversion
 django-import-export
 httplib2
 future
+django-rest-swagger
